Autoplay: fixes IPC traits for WebPreferences.

Bug: 726334
Change-Id: If9232ab19e8bd3e39732aa7ee5944b6d6e9298bb
Reviewed-on: https://chromium-review.googlesource.com/520042
Reviewed-by: Mike West <mkwst@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#476316}
Former-commit-id: 93f44befa96838a3cff744431f2d3c0b05e70be2